funny stats och röstegenskap

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "dev:frontend": "vite",
+    "dev:frontendhost": "vite --host",
     "dev:backend": "nodemon server/index.js",
     "dev": "concurrently 'npm:dev:frontend' 'npm:dev:backend'",
+    "host": "concurrently 'npm:dev:frontendhost' 'npm:dev:backend'",
+
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
